# smart_pointer

./: .gitignore  CMakeLists.googletest.txt.in  CMakeLists.txt
cmake/: googletest.cmake
source/: main.cpp
source/googletest/googletest-build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  googletest-distribution.sln
source/googletest/googletest-build/googlemock/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  gmock.sln  gmock.vcxproj  gmock.vcxproj.filters  gmock_main.vcxproj  gmock_main.vcxproj.filters
source/googletest/googletest-build/googlemock/gmock_main.dir/Debug/gmock_main.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  gmock_main.lastbuildstate
source/googletest/googletest-build/googletest/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  gtest.sln  gtest.vcxproj  gtest.vcxproj.filters  gtest_main.vcxproj  gtest_main.vcxproj.filters
source/googletest/googletest-build/googletest/gtest.dir/Debug/gtest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  (+5 more)
source/smart_pointer/: CMakeLists.txt  smart_pointer.hpp  smart_pointer_complete.hpp
source/smart_pointer/tests/: CMakeLists.txt  smart_pointer_test.cpp
(+8 files in other folders)
